<resources>
    <string name="app_name">ViibeNav</string>

    <string name="action_settings">Settings</string>
    <string name="listenButtonText">Aus Liste wählen</string>
    <string name="suchenButtonText">Nach Raum oder Name suchen</string>
    <string name="sucheStartButtonText">Suche starten</string>
    <string name="settingsButtonText">Einstellungen</string>
    <string name="suchenText">Suchen</string>
    <string name="listeText">Aus Liste wählen</string>
    <string name="suchFeldHint">Eingabe</string>
    <string name="mikroButtonText">Spracheingabe starten</string>
    <string name="roomlistInfoText">Raum auswählen:</string>
    <string name="searchResultText">Suche nach X ergab # Treffer:</string>
    <string name="infoTextSuche">Geben Sie den Namen einer Person oder eines Raumes ein</string>
    <string name="directionArrowImgText">Richtungspfeil</string>
    <string name="walkingIndicatorImgText">Bewegungsindikator</string>
    <string name="searchResultsNothingFoundText">Sie können entweder eine neue Suche mit einem anderen Suchbegriff starten,
        oder einen Raum aus der Liste wählen:</string>
    <string name="roomlistNothingFoundText">Es konnten keine Einträge gefunden werden, vielleicht wurde für dieses
    Gebäude noch keine Karte angelegt. Informieren Sie sich bitte bei der Hausverwaltung.</string>

    <string name="add_info">Hinzufügen</string>
    <string name="cancel_info">Abbrechen</string>
    <string name="personName">Person</string>
    <string name="room_name">Raumname</string>
    <string name="environment">Umgebung</string>
    <string name="set">Einstellen</string>

    <string name="prefDistanceUnit">Einheit der angezeigten Entfernung</string>
    <string name="prefDistanceDefault">Meter</string>
    <string name="prefOrientationUnit">Einheit der angezeigten Orientierung</string>
    <string name="prefOrientationDefault">Grad</string>
    <string name="prefInvertColors">Dunkler Hintergrund</string>
    <string name="prefEnvInfos">Umgebungsinfos einbeziehen</string>
    <string name="expListViewBeschreibung">Liste mit aufklappbaren Elementen</string>
    <string name="navInfoButtonText">Anleitung zur Bedienung</string>
    <string name="infoInstructions">Anleitung zur Bedienung: Nach rechts wischen für nächste Anweisung.
    Nach links wischen für vorherige Anweisung. Nach oben wischen um aktuelle Anweisung zu wiederholen.</string>
    <string name="instructionListImgViewText">Liste der Anweisungen</string>
</resources>
