<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchField"
            android:editable="true"
            android:hint="@string/suchFeldHint"
            android:textSize="30sp"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:layout_marginTop="129dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/sucheStartenImgButton"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/lupe"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@drawable/custom_button"
            android:padding="13dp"
            android:contentDescription="@string/sucheStartButtonText"
            android:layout_alignBottom="@+id/searchField"
            android:layout_alignParentEnd="true"
            android:stateListAnimator="@drawable/button_press_animator"/>

    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/spracheingabeButton"
            android:scaleType="fitCenter"
            android:background="@drawable/custom_button"
            android:padding="35dp"
            android:src="@drawable/mikrofon"
            android:contentDescription="@string/mikroButtonText"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="66dp"
            android:stateListAnimator="@drawable/button_press_animator"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/infoTextSuche"
            android:id="@+id/infoTextSuche"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>
</RelativeLayout>